--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ strategies, exclusively for institutional investors. Our mission is to
 provide scientifically researched, risk-controlled, and highly 
 diversified investment strategies, ensuring reliability and long-term 
 value for professional investors. Our strategic partnership with 
-PAMIYA Strategic Advisors (<a href="http://www.pamiya.org/>www.pamiya.org</a>), a leading research and 
+PAMIYA Strategic Advisors (<a href="http://www.pamiya.org/">www.pamiya.org</a>), a leading research and 
 advisory firm specializing in innovative quantitative capital markets 
 research, will be the basis of our analytical edge and investment 
 approach. 
