--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Our expertise empowers you to drive growth, execute strategic transformations, a
 
                     <!-- COLUMN -->
                     <div class="scroll-animated-from-bottom text-left">
-			<small>&copy; 2025 GA Asset Management BV | Design by <a href="https://templatefoundation.com">Template&nbsp;Foundation</a> | <a href="/imprint.html">Imprint</a> | <a href="/privacy.html">Privacy Policy</a></small>
+			<small>&copy; 2025 GA Asset Management BV | Design by <a href="https://templatefoundation.com">Template&nbsp;Foundation</a> | <a href="/privacy.html">Privacy Policy</a></small>
                     </div>
                     <!-- /COLUMN -->
 
