--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ value for professional investors. Our strategic partnership with
 PAMIYA Strategic Advisors (<a href="http://www.pamiya.org/">www.pamiya.org</a>), a leading research and 
 advisory firm specializing in innovative quantitative capital markets 
 research, will be the basis of our analytical edge and investment 
-approach. 
- 
+approach. </p>
+<p> 
 Our parent company, GA Asset Investment BV, is a specialized advisory 
 firm with a strong track record in designing and implementing 
 off-balance-sheet and debt financing solutions to support 
@@ -159,7 +159,8 @@ restructuring initiatives. Our advisory team consists of seasoned
 professionals with decades of experience in legal, finance, and 
 banking, expertly structuring and executing complex debt financing 
 solutions. 
- 
+</p>
+<p> 
 If you're an institutional investor, family office, or corporate 
 entity interested in our AIFM efforts or seeking strategic debt 
 financing advice, we'd love to connect. Let's discuss your goals&mdash;
@@ -208,19 +209,8 @@ instruments, assessing risk exposure, or exploring alternative
 financing options, we deliver tailored solutions designed to meet your 
 specific needs.</p>
 
-               
-                </div>
-                <!-- /COLUMN -->
-
-
-                <!-- COLUMN -->
-                <div class="text-left service-item scroll-animated-from-bottom">
-
-                   
-                    <i class="fa fa-eye" aria-hidden="true"></i>
-                    <h5>Key Benefits</h5>
-
-                    <ul>
+<p>Key Benefits</p>
+                    <ul>
 <li>Enhanced Financial Flexibility &mdash; Benefit from the Netherlands' flexible legal and tax framework combined with electronically transferable instruments.</li>
 <li>Raise Capital Off-Balance-Sheet &mdash; Secure financing without impacting key financial metrics.</li>
 <li>Stronger Investor Appeal &mdash; Utilize independent SPV structures backed by a trusted legal framework to attract institutional funding.</li>
