--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="navbar-header">
 
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar"><i class="fa fa-bars" aria-hidden="true"></i></button>
-                    <a class="navbar-brand" href="#"><img class="img-responsive" src="/assets/img/GAAM_logo.png" alt="" /></a>
+                    <a class="navbar-brand" href="#"><img width="275px" class="img-responsive" src="/assets/img/GAAM_logo.png" alt="" /></a>
 
                 </div>
                 <!-- /NAVIGATION HEADER -->
@@ -217,10 +217,9 @@ specific needs.</p>
 <li>Risk Mitigation &mdash; Isolate transaction-specific risks from the parent company to safeguard financial stability.</li>
 <li>Custom Solutions &mdash; Tailor debt instruments to align with each transaction's strategic goals.</li>
  
-Our expertise empowers you to drive growth, execute strategic transformations, and maintain the highest standards of governance. 
+<p>Our expertise empowers you to drive growth, execute strategic transformations, and maintain the highest standards of governance.</p>
 
 
-			</p>
 
                
                 </div>
