--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ PAMIYA Strategic Advisors (<a href="http://www.pamiya.org/">www.pamiya.org</a>),
 advisory firm specializing in innovative quantitative capital markets 
 research, will be the basis of our analytical edge and investment 
 approach. </p>
-<p> 
+                <p class="subline scroll-animated-from-bottom">
 Our parent company, GA Asset Investment BV, is a specialized advisory 
 firm with a strong track record in designing and implementing 
 off-balance-sheet and debt financing solutions to support 
@@ -160,7 +160,7 @@ professionals with decades of experience in legal, finance, and
 banking, expertly structuring and executing complex debt financing 
 solutions. 
 </p>
-<p> 
+                <p class="subline scroll-animated-from-bottom">
 If you're an institutional investor, family office, or corporate 
 entity interested in our AIFM efforts or seeking strategic debt 
 financing advice, we'd love to connect. Let's discuss your goals&mdash;
