--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
 
 
             <!-- CONTAINER MID -->
-            <div class="container-mid text-center">
+            <div class="container-fluid text-center">
 
 
 
