--- a/privacy.html
+++ b/privacy.html
@@ -52,9 +52,9 @@
 
 
 
-<h1>Privacy Policy</h1>
+<h3>Privacy Policy</h3>
 
-<p>We are committed to protecting your privacy during your visits to our
+<p class="subline scroll-animated-from-bottom">We are committed to protecting your privacy during your visits to our
 website and recognise our responsibility to hold your information
 securely and confidentially. We do not collect or store personal data on
 our computers other than your IP address (access logging) along with a
@@ -62,20 +62,20 @@ date and time. We do however store a so-called session cookie on your
 computer.</p>
 
 <h6>Cookies</h6>
-<p>Cookies are small text files placed on your computer and are commonly used on the internet.  We use them to:</p>
+<p class="subline scroll-animated-from-bottom">Cookies are small text files placed on your computer and are commonly used on the internet.  We use them to:</p>
 <ul>
 	<li>keep track of when you last visted our site,</li>
 	<li>remember whether or not you accepted the initial disclaimer.</li>
 </ul>
-<p>We do not use cookies to:</p>
+<p class="subline scroll-animated-from-bottom">We do not use cookies to:</p>
 <ul>
 	<li>track your use of the internet after you leave our site,</li>
 	<li>nor do we store any personal information in them that others could read and understand,</li>
 </ul>
-<p>Our cookies will remain on your computer for at most one day.  Our cookies contain no personal information, passwords, nor other other data that can be linked to you.</p>
+<p class="subline scroll-animated-from-bottom">Our cookies will remain on your computer for at most one day.  Our cookies contain no personal information, passwords, nor other other data that can be linked to you.</p>
 
 <h6>Further information</h6>
-<p>We greatly appreciate your confidence in us.  Therefore we wish to be available at all times to answer questions on our privacy policy.  If you wish to receive information not offered by this declaration, or if you wish to receive more detailed information on a subject, please <a href="/#contact">get in touch with us</a> at any time.</p>
+<p class="subline scroll-animated-from-bottom">We greatly appreciate your confidence in us.  Therefore we wish to be available at all times to answer questions on our privacy policy.  If you wish to receive information not offered by this declaration, or if you wish to receive more detailed information on a subject, please <a href="/#contact">get in touch with us</a> at any time.</p>
 
 
             </div>
