--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
        
         <!-- PAGE TITLE -->
-        <title>PAMIYA Strategic Advisors</title>
+        <title>GA Asset Management</title>
        
         <!-- FAVICON -->
         <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -44,7 +44,7 @@
 
 
         <!-- INTRO -->
-        <section id="main">
+        <section id="about">
 
 
             <!-- CONTAINER MID -->
