--- a/privacy.html
+++ b/privacy.html
@@ -44,7 +44,7 @@
 
 
         <!-- INTRO -->
-        <section id="about">
+        <section id="about" class="white">
 
 
             <!-- CONTAINER MID -->
