--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <h3 class="headline scroll-animated-from-bottom"></h3>
 
                 <p class="subline scroll-animated-from-bottom">
-GA Asset Management BV is preparing to register as an Alternative 
+GA Asset Management B.V. is preparing to register as an Alternative 
 Investment Fund Manager (AIFM) to launch cutting-edge quantitative 
 hedge funds focused on global L/S Equity and Managed Futures 
 strategies, exclusively for institutional investors. Our mission is to 
@@ -151,7 +151,7 @@ advisory firm specializing in innovative quantitative capital markets
 research, will be the basis of our analytical edge and investment 
 approach. </p>
                 <p class="subline scroll-animated-from-bottom">
-Our parent company, GA Asset Investment BV, is a specialized advisory 
+Our parent company, GA Asset Investment B.V., is a specialized advisory 
 firm with a strong track record in designing and implementing 
 off-balance-sheet and debt financing solutions to support 
 transformational corporate transactions, including M&A, LBOs, and 
@@ -321,7 +321,7 @@ transaction's strategic goals.</li>
 
                     <!-- COLUMN -->
                     <div class="scroll-animated-from-bottom text-left">
-			<small>&copy; 2025 GA Asset Management BV | Design by <a href="https://templatefoundation.com">Template&nbsp;Foundation</a> | <a href="/privacy.html">Privacy Policy</a></small>
+			<small>&copy; 2025 GA Asset Management B.V. | Design by <a href="https://templatefoundation.com">Template&nbsp;Foundation</a> | <a href="/privacy.html">Privacy Policy</a></small>
                     </div>
                     <!-- /COLUMN -->
 
