--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ transaction's strategic goals.</li>
 
                     <!-- COLUMN -->
                     <div class="scroll-animated-from-bottom text-left">
-			<small>&copy; 2025 GA Asset Management B.V. | Design by <a href="https://templatefoundation.com">Template&nbsp;Foundation</a> | <a href="/privacy.html">Privacy Policy</a></small>
+			<small>&copy; 2025 GA Asset Management B.V. | Design by <a href="https://templatefoundation.com">Template&nbsp;Foundation</a> | <a href="/imprint.html">Imprint</a> | <a href="/privacy.html">Privacy Policy</a></small>
                     </div>
                     <!-- /COLUMN -->
 
