--- a/imprint.html
+++ b/imprint.html
@@ -105,15 +105,15 @@
 <p>GA Asset Management B.V.<br />
 Schiphol Boulevard 155<br />
 1118BG Schiphol<br />
-NL</p>
+The Netherlands</p>
 
-<p>KvK-nummer: 34.3011.44<br />
-btw-identificatienummer: NL8207.64.723B.01</p>
+<p>registration at the chamber of commerce: 34.3011.44<br />
+VAT-ID number: NL8207.64.723B.01</p>
 
 <p><strong>Represented by:</strong><br />
 Gerarda van Moll</p>
 
-<h6>Kontakt</h6>
+<h6>Contact</h6>
 <p>Tel.: +31 6 55194366<br />
 E-Mail: gerarda.vanmoll@gaam.nl</p>
 
